# ufo_evolo

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml  setup.py
.github/workflows/: python-publish.yml
cmake/: ufo-config.cmake.in  ufoConfig.cmake.in
