<?xml version="1.0"?>
<package format="2">
  <name>ufo</name>
  <version>1.0.0</version>
  <description>The ufo package</description>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/danielduberg/ufo</url>

  <buildtool_depend>cmake</buildtool_depend>
  
  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
